@@ -2480,6 +2480,44 @@ name|cls
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Copy constructor    */
+specifier|public
+name|HiveConf
+parameter_list|(
+name|HiveConf
+name|other
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|other
+argument_list|)
+expr_stmt|;
+name|hiveJar
+operator|=
+name|other
+operator|.
+name|hiveJar
+expr_stmt|;
+name|auxJars
+operator|=
+name|other
+operator|.
+name|auxJars
+expr_stmt|;
+name|origProp
+operator|=
+operator|(
+name|Properties
+operator|)
+name|other
+operator|.
+name|origProp
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+block|}
 specifier|private
 name|Properties
 name|getUnderlyingProps
